--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                         </a>
                     </li>
                 </ul>
+                Cornell University <br>
+                <!-- <br> -->
+                (<sup>*</sup>Equal contribution)
             </div>
         </div>
 
@@ -106,6 +109,7 @@
                         </li>
                     </ul>
                 </div>
+                <br>
         </div>
 
 
@@ -134,8 +138,6 @@ We present an end-to-end inverse rendering pipeline that includes a fully differ
         </div>
 
 
-
-
 <!--         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
@@ -155,25 +157,25 @@ We present an end-to-end inverse rendering pipeline that includes a fully differ
                     BibTeX
                 </h3>
                 <div class="form-group col-md-10 col-md-offset-1">
-                    <textarea id="bibtex" class="form-control" readonly="" style="display: none;">@inproceedings{physg2020,
-  title={Inverse Rendering with Spherical Gaussians forPhysics-based Material Editing and Relighting},
-  author={Kai Zhang and Fujun Luan and Qianqian Wang and Kavita Bala and Noah Snavely},
-  booktitle={The IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
-  year={2021}}
-</textarea><div class="CodeMirror cm-s-default CodeMirror-wrap"><div style="overflow: hidden; position: relative; width: 3px; height: 0px; top: 4px; left: 4px;"><textarea autocorrect="off" autocapitalize="off" spellcheck="false" style="position: absolute; padding: 0px; width: 1000px; height: 1em; outline: none;" tabindex="0"></textarea></div><div class="CodeMirror-vscrollbar" cm-not-content="true"><div style="min-width: 1px; height: 0px;"></div></div><div class="CodeMirror-hscrollbar" cm-not-content="true"><div style="height: 100%; min-height: 1px; width: 0px;"></div></div><div class="CodeMirror-scrollbar-filler" cm-not-content="true"></div><div class="CodeMirror-gutter-filler" cm-not-content="true"></div><div class="CodeMirror-scroll" tabindex="-1"><div class="CodeMirror-sizer" style="margin-left: 0px; margin-bottom: -15px; border-right-width: 15px; min-height: 144px; padding-right: 0px; padding-bottom: 0px;"><div style="position: relative; top: 0px;"><div class="CodeMirror-lines"><div style="position: relative; outline: none;"><div class="CodeMirror-measure"><span><span>​</span>x</span></div><div class="CodeMirror-measure"></div><div style="position: relative; z-index: 1;"></div><div class="CodeMirror-cursors"><div class="CodeMirror-cursor" style="left: 4px; top: 0px; height: 17px;">&nbsp;</div></div><div class="CodeMirror-code" style=""><pre class=" CodeMirror-line "><span style="padding-right: 0.1px;">@inproceedings{nerv2020,</span></pre><pre class=" CodeMirror-line "><span style="padding-right: 0.1px;">  title={NeRV: Neural Reflectance and Visibility Fields for Relighting and View Synthesis},</span></pre><pre class=" CodeMirror-line "><span style="padding-right: 0.1px;">  author={Pratul P. Srinivasan and Boyang Deng and Xiuming Zhang and Matthew Tancik and Ben Mildenhall and Jonathan T. Barron},</span></pre><pre class=" CodeMirror-line "><span style="padding-right: 0.1px;">  booktitle={arXiv},</span></pre><pre class=" CodeMirror-line "><span style="padding-right: 0.1px;">  year={2020}}</span></pre><pre class=" CodeMirror-line "><span style="padding-right: 0.1px;"><span cm-text="">​</span></span></pre></div></div></div></div></div><div style="position: absolute; height: 15px; width: 1px; top: 144px;"></div><div class="CodeMirror-gutters" style="display: none; height: 159px;"></div></div></div>
+                    <textarea id="bibtex" class="form-control" readonly="" style="display: none;">
+@inproceedings{physg2020,
+title={PhySG: Inverse Rendering with Spherical Gaussians forPhysics-based Material Editing and Relighting},
+author={Kai Zhang and Fujun Luan and Qianqian Wang and Kavita Bala and Noah Snavely},
+booktitle={The IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+year={2021}}
+                    </textarea>
                 </div>
             </div>
         </div>
+
+
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <h3>
-                    Acknowledgements
-                </h3>
                 The website template was borrowed from <a href="http://mgharbi.com/">Michaël Gharbi</a>.
                 <p></p>
             </div>
         </div>
-    </div>
+    <!-- </div> -->
 
 
 </body></html>
