--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     Example Results: View Synthesis, Relighting and Material editing
                 </h3>
                 <video id="v0" width="100%" autoplay="" loop="" muted="" controls="">
-                  <source src="results.mp4" type="video/mp4">
+                  <source src="files/real-world_results.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
