--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <h3>
                     Abstract
                 </h3>
-                <img src="./files/pipeline_overview.png" class="img-responsive" alt="overview"><br>
+                <img src="./files/physg_pipeline.png" class="img-responsive" alt="overview"><br>
                 <p class="text-justify">
 We present an end-to-end inverse rendering pipeline that includes a fully differentiable renderer, and can reconstruct geometry, materials, and illumination from scratch from a set of images. Our rendering framework represents specular BRDFs and environmental illumination using mixtures of spherical Gaussians, and represents geometry as a signed distance function parameterized as a Multi-Layer Perceptron. The use of spherical Gaussians allows us to efficiently solve for approximate light transport, and our method works on scenes with challenging non-Lambertian reflectance captured under natural, static illumination. We demonstrate, with both synthetic and real data, that our reconstruction not only can render novel viewpoints, but also enables physics-based appearance editing of materials and illumination.
                 </p>
