--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     <link rel="stylesheet" href="./files/bootstrap.min(1).css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<!--     <script type="text/javascript" async="" src="./files/analytics.js"></script><script async="" src="./files/js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E0ZMW34H4P"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-110862391-3');
-    </script> -->
-
+      gtag('config', 'G-E0ZMW34H4P');
+    </script>
+    
     <script src="./files/jquery.min.js"></script>
     <script src="./files/bootstrap.min.js"></script>
     <script src="./files/codemirror.min.js"></script>
