--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
-                    Example Results: View Synthesis, Relighting and Material editing
+                    Example Real Results: View Synthesis, Relighting and Material editing
                 </h3>
                 <video id="v0" width="100%" autoplay="" loop="" muted="" controls="">
                   <source src="files/real-world_results.mp4" type="video/mp4">
