--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.youtube.com/watch?v">
+                            <a href="https://">
                             <img src="./files/youtube_icon_dark.png" height="120px"><br>
                                 <h4><strong>Technical Video [Coming Soon]</strong></h4>
                             </a>
