--- a/index.html
+++ b/index.html
@@ -90,19 +90,19 @@
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <ul class="nav nav-pills nav-justified">
                         <li>
-                            <a href="https://arxiv.org/abs/">
+                            <a href="https://kai-46.github.io/PhySG-website/">
                             <img src="./files/paper.png" height="120px"><br>
                                 <h4><strong>Paper</strong></h4>
                             </a>
                         </li>
                         <li>
-                            <a href="https://">
+                            <a href="https://kai-46.github.io/PhySG-website/">
                             <img src="./files/youtube_icon_dark.png" height="120px"><br>
                                 <h4><strong>Technical Video [Coming Soon]</strong></h4>
                             </a>
                         </li>
                         <li>
-                            <a href="https://">
+                            <a href="https://kai-46.github.io/PhySG-website/">
                             <img src="./files/github_pad.png" height="120px"><br>
                                 <h4><strong>Code [Coming Soon]</strong></h4>
                             </a>
