--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <ul class="nav nav-pills nav-justified">
                         <li>
-                            <a href="https://kai-46.github.io/PhySG-website/">
+                            <a href="https://arxiv.org/pdf/2104.00674.pdf">
                             <img src="./files/paper.png" height="120px"><br>
                                 <h4><strong>Paper</strong></h4>
                             </a>
