--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
                                 <h4><strong>Paper</strong></h4>
                             </a>
                         </li>
-                        <li>
+<!--                         <li>
                             <a href="https://kai-46.github.io/PhySG-website/">
                             <img src="./files/youtube_icon_dark.png" height="120px"><br>
                                 <h4><strong>Technical Video [Coming Soon]</strong></h4>
                             </a>
-                        </li>
+                        </li> -->
                         <li>
                             <a href="https://kai-46.github.io/PhySG-website/">
                             <img src="./files/github_pad.png" height="120px"><br>
@@ -113,13 +113,25 @@
         </div>
 
 
-        <div class="row">
+<!--         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
                     Example Real Results: View Synthesis, Relighting and Material editing
                 </h3>
                 <video id="v0" width="100%" autoplay="" loop="" muted="" controls="">
                   <source src="files/real-world_results.mp4" type="video/mp4">
+                </video>
+            </div>
+        </div> -->
+
+        
+       <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h3>
+                    Technical video
+                </h3>
+                <video id="v0" width="100%" autoplay="" loop="" muted="" controls="">
+                  <source src="https://www.youtube.com/embed/D_M4wTTLIeM" type="video/mp4">
                 </video>
             </div>
         </div>
