--- a/index.html
+++ b/index.html
@@ -130,9 +130,12 @@
                 <h3>
                     Technical video
                 </h3>
-                <video id="v0" width="100%" autoplay="" loop="" muted="" controls="">
+<!--                 <video id="v0" width="100%" autoplay="" loop="" muted="" controls="">
                   <source src="https://www.youtube.com/embed/D_M4wTTLIeM" type="video/mp4">
-                </video>
+                </video> -->
+                <iframe width="100%"
+                    src="https://www.youtube.com/embed/D_M4wTTLIeM">
+                </iframe>
             </div>
         </div>
 
