--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
 <!--                 <video id="v0" width="100%" autoplay="" loop="" muted="" controls="">
                   <source src="https://www.youtube.com/embed/D_M4wTTLIeM" type="video/mp4">
                 </video> -->
+                
                 <iframe width="100%" height="100%"
-                    src="https://www.youtube.com/embed/D_M4wTTLIeM">
+                    src="https://www.youtube.com/embed/D_M4wTTLIeM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
                 </iframe>
             </div>
         </div>
