--- a/index.html
+++ b/index.html
@@ -134,9 +134,11 @@
                   <source src="https://www.youtube.com/embed/D_M4wTTLIeM" type="video/mp4">
                 </video> -->
                 
-                <iframe width="100%" height="100%"
-                    src="https://www.youtube.com/embed/D_M4wTTLIeM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
-                </iframe>
+                <div class="html5-video-player">
+                    <iframe width="100%" height="100%"
+                        src="https://www.youtube.com/embed/D_M4wTTLIeM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+                    </iframe>
+                </div>
             </div>
         </div>
 
