--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <link rel="stylesheet" href="./files/font-awesome.min.css">
     <link rel="stylesheet" href="./files/codemirror.min.css">
     <link rel="stylesheet" href="./files/app.css">
-
+    <link rel="stylesheet" href="./files/www-player-webp.css">
+ 
     <link rel="stylesheet" href="./files/bootstrap.min(1).css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
