--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             </a>
                         </li> -->
                         <li>
-                            <a href="https://kai-46.github.io/PhySG-website/">
+                            <a href="https://github.com/Kai-46/PhySG">
                             <img src="./files/github_pad.png" height="120px"><br>
                                 <h4><strong>Code [Coming Soon]</strong></h4>
                             </a>
