--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <li>
                             <a href="https://github.com/Kai-46/PhySG">
                             <img src="./files/github_pad.png" height="120px"><br>
-                                <h4><strong>Code [Coming Soon]</strong></h4>
+                                <h4><strong>Code</strong></h4>
                             </a>
                         </li>
                     </ul>
