--- a/index.html
+++ b/index.html
@@ -114,16 +114,6 @@
         </div>
 
 
-<!--         <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <h3>
-                    Example Real Results: View Synthesis, Relighting and Material editing
-                </h3>
-                <video id="v0" width="100%" autoplay="" loop="" muted="" controls="">
-                  <source src="files/real-world_results.mp4" type="video/mp4">
-                </video>
-            </div>
-        </div> -->
 
         
        <div class="row">
@@ -143,6 +133,16 @@
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h3>
+                    Example Real Results: View Synthesis, Relighting and Material editing
+                </h3>
+                <video id="v0" width="100%" autoplay="" loop="" muted="" controls="">
+                  <source src="files/real-world_results.mp4" type="video/mp4">
+                </video>
+            </div>
+        </div>
 
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
