--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
                             </a>
                         </li> -->
                         <li>
+                            <a href="./files/supp.pdf">
+                            <img src="./files/supp_cover.png" height="120px"><br>
+                                <h4><strong>Supplementary</strong></h4>
+                            </a>
+                        </li>
+                        <li>
                             <a href="https://github.com/Kai-46/PhySG">
                             <img src="./files/github_pad.png" height="120px"><br>
                                 <h4><strong>Code</strong></h4>
