--- a/index.html
+++ b/index.html
@@ -200,6 +200,20 @@ year={2021}}
         </div>
 
 
+        
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h3>
+                    Acknowledgements
+                </h3>
+                <div class="form-group col-md-10 col-md-offset-1">
+                    <textarea id="ackn" class="form-control" readonly="" style="display: none;">
+This work was supported in part by the National Science Foundation (IIS-2008313, CHS-1900783, CHS-1930755), and by Intel.
+                    </textarea>
+                </div>
+            </div>
+        </div>
+      
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 The website template was borrowed from <a href="http://mgharbi.com/">Michaël Gharbi</a>.
