--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@ We present PhySG, an end-to-end inverse rendering pipeline that includes a fully
                 </h3>
                 <div class="form-group col-md-10 col-md-offset-1">
                     <textarea id="bibtex" class="form-control" readonly="" style="display: none;">
-@inproceedings{physg2020,
-title={PhySG: Inverse Rendering with Spherical Gaussians for Physics-based Material Editing and Relighting},
+@inproceedings{physg2021,
+title={{PhySG}: {I}nverse Rendering with Spherical Gaussians for Physics-based Material Editing and Relighting},
 author={Kai Zhang and Fujun Luan and Qianqian Wang and Kavita Bala and Noah Snavely},
 booktitle={The IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
 year={2021}}
